--- a/mevanur.html
+++ b/mevanur.html
@@ -24,7 +24,7 @@
         <div class="inner_home">
         </div>
             <div class="child_home">
-                <img src="./img/7.png" alt="" style="width: 300px; height: auto; margin-left: 300px;">
+                <img src="./img/7.PNG" alt="" style="width: 300px; height: auto; margin-left: 300px;">
             </div>
             <div class="child_home">
                 <h1 style= "font-size: 26px;  color: white;  margin-left: 260px;">Software Engineering Student</h1>
