--- a/index.html
+++ b/index.html
@@ -13,29 +13,76 @@
                 <h2><a href="#"> Meva Nur Yazıcıoğlu</a></h2>
             </div>
             <ul class = "nav_links">
-                <li><a href="#anasayfa">Home</a></li>
-                <li><a href="#hakkimda">About</a></li>
-                <li><a href="#iletisim">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>    
 
     </header>
-    <section id="anasayfa">
-        <div class="inner_anasayfa">
+    <section id="home">
+        <div class="inner_home">
         </div>
-            <div class="child_anasayfa">
-                <img src="./foto/7.png" alt="" style="width: 300px; height: auto;">
+            <div class="child_home">
+                <img src="./img/7.PNG" alt="" style="width: 300px; height: auto; margin-left: 300px;">
             </div>
-            <div class="child_anasayfa">
-                <h1 style="font-family: 'Crimson Text', serif; font-size: 26px; color: gray;">Software Engineering Student</h1>
+            <div class="child_home">
+                <h1 style= "font-size: 26px;  color: white;  margin-left: 260px;">Software Engineering Student</h1>
             </div>
     </section>
     <!--HAKKİMDA-->
-    <section id="hakkimda">
+    <section id="about">
+        <div class="section_title">
+            <h2>About</h2>
+        </div>
         <div class="innerabout">
-           <div class=""innerabout_child>
+           <div class="innerabout_child">
+                <div class ="icon">
+                </div>
+                <h3> Univercity</h3>
+                <p> Kayseri Univercity</p>
+           </div>
+            <div class="innerabout_child">
+                <div class ="icon">
+                </div>
+                <h3> Program</h3>
+                <p> Software Engineering</p>
+            </div>
+            <div class="innerabout_child">
+                <div class="icon">
+                    <!-- İkon buraya gelecek -->
+                </div>
+                <h3>Programming Languages</h3>
+                <p class="programming-languages">Python, C, C++, C#</p>
+            </div>
 
            </div>
+        </div>
+    </section>
+
+    <!--iletisim-->
+    <section id="contact">
+        <div class="section_title">
+            <h2>Contact</h2>
+        </div>
+        <div class="innercontact">
+           <div class="innercontact_child">
+            <div class ="icon">
+            </div>
+            <a href="https://www.instagram.com/_ymevanur/profilecard/?igsh=MW84MmFwNzBrbTVzMg==" ><img src="./img/mm.png" alt="Instagram" style="width: 50px; height: auto; margin-left: 50px;">
+
+           </div>
+            <div class="innercontact_child">
+             <div class ="icon">
+             </div>
+             <a href="https://tr.linkedin.com/in/meva-nur-yazicio%C4%9Flu-79194a280" ><img src="./img/linkedin.png" alt="LinkedIn" style="width: 50px; height: auto; margin-left: 50px;">
+ 
+            </div>
+        <div class="innercontact_child">
+         <div class ="icon">
+         </div>
+         <a href="https://github.com/mevanurr" ><img src="./img/github.png" alt="GitHub" style="width:50px; height: auto; margin-left: 50px;">
+
         </div>
     </section>
 
